<resources>
    <string name="app_name">Jbmrus</string>
    <string name="action_cart">Cart</string>
    <string name="catalog">Directory</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_cart_">Cart</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_buy">Checkout</string>
    <string name="title_activity_offers">Directory</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="haus">Haus</string>
    <string name="porch">Porch</string>
    <string name="aprt">Aprt</string>
    <string name="order_amount">Order amount</string>
    <string name="confirm">Confirm</string>


</resources>
